# EmbeddedLinuxUpdates

./: PublisherClient.go  README.md  Server.go
ArtifactCreator/: ArtifactCreator.go  ArtifactCryptoHelper.go
DeviceClient/: CMakeLists.txt
DeviceClient/ArtifactParser/: ArtifactCryptoHelper.h  ArtifactParser.cpp  ArtifactParser.h  CMakeLists.txt
DeviceClient/Client/: CMakeLists.txt  UpdateClient.cpp  UpdateDownloadClient.cpp  UpdateDownloadClient.h
DeviceClient/ImageWriter/: CMakeLists.txt  writer.cpp  writer.h
DeviceClient/Logger/: CMakeLists.txt  log.cpp  log.h
DeviceClient/Test/: CMakeLists.txt  log_test.cpp  writer_test.cpp
meta-update/: README
meta-update/conf/: layer.conf
meta-update/conf/machine/: raspberrypi4.conf
meta-update/recipes-bsp/bootfiles/: rpi-config_git.bbappend
meta-update/recipes-bsp/movek/: movek.bb
meta-update/recipes-bsp/rpi-u-boot-scr/: rpi-u-boot-scr.bbappend
meta-update/recipes-bsp/rpi-u-boot-scr/files/: boot.cmd.in.new
meta-update/recipes-bsp/u-boot/: u-boot_%.bbappend
meta-update/recipes-bsp/u-boot/files/: 0001-Enable-Bootlimit.patch
meta-update/wic/: sdimage-raspberrypi-dualrootfs.wks
